# evernote-to-obsidian

./: .gitignore  ACCOUNT_SETUP_GUIDE.md  AGENTS.md  CLAUDE.md  ELECTRON_CLIENT.md  LICENSE  MACOS_CLIENT.md  README.md  TEST_SUMMARY.md  TROUBLESHOOTING.md  WEB_USAGE_GUIDE.md  analyze_duplicate_notes.py  backend_app.py  compare_environments.py  config.yaml  debug_evernote.py  debug_sync_failure.py  debug_sync_issues.py  debug_web_migration.py  macos_app.py  migrate.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-macos-build.txt  requirements.txt  start_web.py  test_agent_cli.py  test_backend_app.py  test_conversion.py  test_deduplication.py  test_desktop_api.py  test_desktop_smoke.py  test_electron_packaging.py  test_export.py  test_init_fix.py  test_integration_steps.py  test_macos_app.py  test_macos_packaging.py  (+13 more)
.superpowers/sdd/: task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  (+4 more)
docs/: release-checklist.md
electron/: main.test.ts  main.ts  preload.test.ts  preload.ts  types.ts
examples/: quick_start.py  sample_config.yaml  test_basic.py
frontend/: index.html
packaging/: build_macos.sh  build_windows.ps1  electron-builder.yml  pyinstaller-evernote2obsidian.spec  smoke_test.py
scripts/: build_backend.py  build_electron_app.py  build_macos_app.py  clean_dist_electron.cjs  run_python_build.cjs
src/: agent_cli.py  config.py  deduplication_manager.py  desktop_api.py  enex_parser.py  evernote2obsidian.py  evernote_exporter.py  file_organizer.py  markdown_converter.py  obsidian_manager.py  sync_manager.py  unified_migrator.py
templates/: base.html  config.html  index.html  migrate.html  results.html  日记模板.md
tests/: test_cli.py  test_core_state.py  test_enex_writer.py  test_runner.py  test_web_release.py
(+61 files in other folders)
