[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evernote-to-obsidian"
version = "0.1.0"
description = "Convert Evernote ENEX exports into an Obsidian vault"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "click>=8.0.0",
  "evernote-backup==1.13.1",
  "flask>=2.3.0",
  "flask-socketio>=5.3.0",
  "html2text>=2020.1.16",
  "python-socketio>=5.8.0",
  "PyYAML>=6.0",
]

[project.scripts]
evernote-to-obsidian = "agent_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["agent_cli"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["evernote_to_obsidian*"]
